--- a/src/SysTracker/Desktop/MainWindow.xaml
+++ b/src/SysTracker/Desktop/MainWindow.xaml
@@ -38,8 +38,8 @@
                            MouseLeave="Close_MouseLeave">X</TextBlock>
             </Grid>
             <StackPanel Orientation="Horizontal" Margin="0 20 0 0" Grid.Row="1">
-                <RadioButton GroupName="Content" IsChecked="True" Style="{StaticResource RadioSelector}" Content="General"></RadioButton>
-                <RadioButton GroupName="Content" Style="{StaticResource RadioSelector}" Content="CPU"></RadioButton>
+                <RadioButton GroupName="Content" Click="OpenGeneral_Click" IsChecked="True" Style="{StaticResource RadioSelector}" Content="General"></RadioButton>
+                <RadioButton GroupName="Content" Click="OpenCpu_Click" Style="{StaticResource RadioSelector}" Content="CPU"></RadioButton>
                 <RadioButton GroupName="Content" Style="{StaticResource RadioSelector}" Content="GPU"></RadioButton>
                 <RadioButton GroupName="Content" Style="{StaticResource RadioSelector}" Content="RAM"></RadioButton>
                 <RadioButton GroupName="Content" Style="{StaticResource RadioSelector}" Content="Disk"></RadioButton>
@@ -48,6 +48,9 @@
                 <ContentControl.Resources>
                     <DataTemplate DataType="{x:Type viewmodel:GeneralViewModel}">
                         <views:GeneralView/>
+                    </DataTemplate>
+                    <DataTemplate DataType="{x:Type viewmodel:CpuViewModel}">
+                        <views:CpuView/>
                     </DataTemplate>
                 </ContentControl.Resources>
             </ContentControl>
