--- a/src/SysTracker/Desktop/Views/GpuView.xaml
+++ b/src/SysTracker/Desktop/Views/GpuView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SysTracker.Desktop.Views.CpuView"
+﻿<UserControl x:Class="SysTracker.Desktop.Views.GpuView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,15 +8,16 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <DataGrid ItemsSource="{Binding Properties}" 
-                  AutoGenerateColumns="False" IsReadOnly="True" 
-                  CanUserResizeRows="False" 
-                  RowBackground="#0a0a0a" 
-                  Background="#0a0a0a"
-                  Foreground="#AF2F2F"
-                  FontSize="18"
-                  VerticalScrollBarVisibility="Auto">
+          AutoGenerateColumns="False" 
+          CanUserResizeRows="False" 
+          RowBackground="#0a0a0a" 
+          Background="#0a0a0a"
+          Foreground="#AF2F2F"
+          FontSize="18"
+          VerticalScrollBarVisibility="Auto"
+          HorizontalScrollBarVisibility="Visible">
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Title" Binding="{Binding Title}" Width="*" CanUserResize="False" />
+                <DataGridTextColumn Header="Title" Binding="{Binding Title}" Width="*" />
                 <DataGridTextColumn Header="Content" Binding="{Binding Content}" Width="*" />
             </DataGrid.Columns>
 
