--- a/src/SysTracker/Desktop/Views/RamView.xaml
+++ b/src/SysTracker/Desktop/Views/RamView.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="SysTracker.Desktop.Views.GpuView"
+﻿<UserControl x:Class="SysTracker.Desktop.Views.RamView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -8,12 +8,14 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <DataGrid ItemsSource="{Binding Properties}" 
-          RowBackground="#0a0a0a" 
-          Background="#0a0a0a"
-          Foreground="#AF2F2F"
-          FontSize="18"
-          VerticalScrollBarVisibility="Auto"
-          HorizontalScrollBarVisibility="Auto">
+  CanUserResizeRows="False" 
+  RowBackground="#0a0a0a" 
+  Background="#0a0a0a"
+  Foreground="#AF2F2F"
+  FontSize="18"
+  VerticalScrollBarVisibility="Auto"
+  HorizontalScrollBarVisibility="Auto">
+
         </DataGrid>
     </Grid>
 </UserControl>
